<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MADE</string>
    <string name="length" translatable="false">Panjang</string>
    <string name="width" translatable="false">Lebar</string>
    <string name="height" translatable="false">Tinggi</string>
    <string name="calculate" translatable="false">Kalkulasi</string>
    <string name="result" translatable="false">Hasil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="content_text" translatable="false">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL,
        on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US,
        where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing
        Nexus series.
    </string>
    <string name="content_specs_display" translatable="false">5.0 inches\n
        FHD AMOLED at 441ppi\n
        2.5D Corning® Gorilla® Glass 4
    </string>
    <string name="content_specs_size" translatable="false">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery" translatable="false">2,770 mAh battery\n
        Standby time (LTE): up to 19 days\n
        Talk time (3g/WCDMA): up to 26 hours\n
        Internet use time (Wi-Fi): up to 13 hours\n
        Internet use time (LTE): up to 13 hours\n
        Video playback: up to 13 hours\n
        Audio playback (via headset): up to 110 hours\n
        Fast charging: up to 7 hours of use from only 15 minutes of charging
    </string>
    <string name="total_photos" translatable="false">6 Photos</string>
    <string name="dummy_price" translatable="false">$735</string>
    <string name="dummy_stock" translatable="false">Stock hanya 5 buah</string>
    <string name="spesification" translatable="false">Spesifikasi</string>
    <string name="display" translatable="false">Display</string>
    <string name="size" translatable="false">Size</string>
    <string name="battery" translatable="false">Battery</string>
    <string name="seller" translatable="false">Penjual</string>
    <string name="dummy_seller_name" translatable="false">Sambudi Sugya Putra</string>
    <string name="buy" translatable="false">Beli</string>
    <string name="search_hint" translatable="false">Masukan Kata Kunci</string>
    <string name="tab_text_1" translatable="false">Tab1</string>
    <string name="tab_text_2" translatable="false">Tab2</string>
    <string name="tab_text_3" translatable="false">Tab3</string>


    <!-- Localization -->
    <string name="hello_world">Hello World %1$s, you have %2$d pokes from %3$s</string>
    <string name="good_morning">Good Morning</string>
    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found.</item>
        <item quantity="other">%d songs found.</item>
    </plurals>
    <string name="app_homeurl">
        Visit us at <xliff:g id="application_homepage">https://dicoding.com</xliff:g>
    </string>
    <string name="change_language_settings">Change Language Settings</string>

    <string name="status">Status Aplikasi</string>
    <string name="status_pre">Status : onPreExecute</string>
    <string name="status_post">Status : onPostExecute</string>
    <string name="desc">Description</string>

    <string name="start_service">Start Service</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop bound Service</string>

    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi ngga? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="from">From</string>
    <string name="incoming_message">Incoming Message</string>

    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Batalkan Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>

    <string name="open_detail">Open Detail</string>
    <string name="notification_title">Hi, how are you?</string>
    <string name="notification_message">Do you have any plan this weekend? Let\'s hangout</string>
    <string name="detail_title">Hola, Good News</string>
    <string name="detail_message">Now you can learn android in Dicoding</string>

    <string name="file_new">File New</string>
    <string name="file_open">File Open</string>
    <string name="file_save">File Save</string>
    <string name="title">Title</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="love_manchester_united">Suka manchester united?</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Narenda Wicaksono</string>
    <string name="dummy_email">narenda@dicoding.com</string>
    <string name="dummynumber">123456</string>
    <string name="dummyage">30</string>
    <string name="dummyislove">IsLoveMU</string>

    <string name="nothing">Tidak Ada</string>
    <string name="is_love">Suka Manchester United</string>
    <string name="key_email">email</string>
    <string name="key_age">age</string>
    <string name="key_phone">phone</string>
    <string name="key_love">love</string>
    <string name="key_name">name</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Ini Widget</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


</resources>
